tree-sitter-ldoc/test/corpus/basics.txt
================================================================================
Document Block
================================================================================

@document
  title: Test Document
  author: Test Author

--------------------------------------------------------------------------------

(source_file
  (document_block
    (indented_line)
    (indented_line)))

================================================================================
Meta Block
================================================================================

@meta
  version: 1.0
  status: draft
@end

--------------------------------------------------------------------------------

(source_file
  (meta_block
    (indented_line)
    (indented_line)))

================================================================================
Headers
================================================================================

# Heading 1
## Heading 2
### Heading 3

--------------------------------------------------------------------------------

(source_file
  (header
    (header_marker))
  (header
    (header_marker))
  (header
    (header_marker)))

================================================================================
Comments
================================================================================

// This is a comment
// Another comment

--------------------------------------------------------------------------------

(source_file
  (comment
    (line_comment))
  (comment
    (line_comment)))

================================================================================
Variables
================================================================================

Hello {{name}}!

--------------------------------------------------------------------------------

(source_file
  (paragraph
    (text)
    (variable
      (variable_content))
    (text)))

================================================================================
Emphasis
================================================================================

This is **bold** and *italic* text.

--------------------------------------------------------------------------------

(source_file
  (paragraph
    (text)
    (emphasis)
    (text)
    (emphasis)
    (text)))

================================================================================
Page Break
================================================================================

@pagebreak

--------------------------------------------------------------------------------

(source_file
  (pagebreak))

================================================================================
Anchors
================================================================================

@anchor section-intro

--------------------------------------------------------------------------------

(source_file
  (anchor))

================================================================================
Modifiers
================================================================================

@center Centered text

--------------------------------------------------------------------------------

(source_file
  (modifier_line
    (modifier)))

================================================================================
Numbered Items
================================================================================

@1 First item
@2 Second item

--------------------------------------------------------------------------------

(source_file
  (numbered_item
    (numbered_marker))
  (numbered_item
    (numbered_marker)))

================================================================================
Bullet Items
================================================================================

@- Bullet one
@- Bullet two

--------------------------------------------------------------------------------

(source_file
  (bullet_item
    (bullet_marker))
  (bullet_item
    (bullet_marker)))
